--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -84,6 +84,14 @@
 % \section{Publikace}
 \section{Selected Bibliography}
 
+
+\cvitem{2018}{Jindřich Libovický, Jindřich Helcl: End-to-End Non-Autoregressive Neural Machine Translation with Connectionist Temporal Classification.
+  In \emph{Proceedings of the Conference on Empirical Methods in Natural Language Processing EMNLP 2018}}
+
+\cvitem{2018}{Jindřich Libovický, Jindřich Helcl, David Mareček: Input Combination Strategies for Multi-Source Transformer Decoder. In \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
+
+\cvitem{2018}{Jindřich Helcl, Jindřich Libovický, Dušan Variš: 	CUNI System for WMT18 Multimodal Tranlsation Task. In \emph{Proceedings of the Third Conference on Machine Translation (WMT)}}
+
 \cvitem{2017}{Antonio Valerio Miceli Barone, Jindřich Helcl, Rico Sennrich, Barry Haddow and Alexandra Birch: Deep Architectures for Neural Machine Translation. In \emph{Proceedings of the Second Conference on Machine Translation (WMT)}}
 
 \cvitem{2017}{Ondřej Bojar, Jindřich Helcl, Tom Kocmi, Jindřich Libovický, Tomáš Musil: Results of the WMT17 Neural MT Training Task. In \emph{Proceedings of the Second Conference on Machine Translation}}
