fix typo, unify title

--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -9,8 +9,8 @@
 \usepackage{filecontents}
 \begin{filecontents*}{\jobname.xmpdata}
   \Author{Jindřich Helcl}
-  \Title{Context in Neural Machine Translation}
-  \Keywords{non-autoregressive neural machine translation, multimodal neural machine translation, neural machnie translation, deep learning}
+  \Title{On the Importance of Context in Neural Machine Translation}
+  \Keywords{non-autoregressive neural machine translation, multimodal neural machine translation, neural machine translation, deep learning}
   \Subject{TODO}
   \Publisher{Charles University}
 \end{filecontents*}
