--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -1,5 +1,20 @@
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Introduction}
+\label{chap:intro}
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Ahoj, hello, world. \gls{nlp}
+
+In this thesis, we present two case studies aimed on this phenomenon. In the
+first study, we provide additional context to the \gls{nmt} system and observe
+the changes in translation quality. In the other case study, we go the other
+way: we limit the context available to the decoder and examine the model
+behavior.
+
+
+This thesis is structured as follows. In Chapter \ref{chap:nmt}, we describe
+the basics of \gls{nmt} as well as recent advancements in the field. Chapter
+\ref{chap:context} summarizes the scientific contributions exploring the
+influence of context in \gls{nmt} from different perspectives. We present two
+case studies focused on the importance of context in \gls{nmt} in Chapters
+\ref{chap:mmmt} and \ref{chap:nar}. The discussion of the results observed in
+the case studies is given in Chapter \ref{chap:discuss}.
