--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -24,6 +24,8 @@
 \usepackage{textcomp}
 \usepackage[defaultlines=4,all]{nowidow}
 
+\usepackage{markdown}
+
 \usepackage{graphicx} % nezbytné pro standardní vkládání obrázků do dokumentu
 \usepackage[usenames,dvipsnames,svgnames,table,rgb]{xcolor}
 \usepackage[twoside, inner=3.7cm, outer=2.9cm, top=2.6cm, bottom=3.4cm]{geometry} % nastavení dané velikosti okrajů
@@ -266,7 +268,7 @@ I understand that my work relates to the rights and obligations
 
 \sloppy
 \include{01-intro}
-%\include{02-deep-learning}
+\include{02-nmt}
 %\include{03-language-and-vision}
 %\include{04-mmt}
 %\include{05-architectures}
