added markdown fun

--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -27,7 +27,7 @@ víceméně náplň kompendia.
 ### Pohádka ###
 
 **preface**
-\gls{NMT} je to jak se dělá překlad;
+\gls{nmt} je to jak se dělá překlad;
 
 
 \end{markdown}
@@ -41,3 +41,9 @@ Most of the \gls{nmt} architectures have two parts: an \emph{encoder} and a
 \emph{decoder}. The encoder processes the input sentence and creates a hidden
 representation. The decoder then accesses this hidden representation and
 generates the output sentence.
+
+
+
+\begin{markdown}
+
+\end{markdown}
