--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -24,7 +24,7 @@
 \usepackage{textcomp}
 \usepackage[defaultlines=4,all]{nowidow}
 
-\usepackage{markdown}
+\usepackage[hybrid]{markdown}
 
 \usepackage{graphicx} % nezbytné pro standardní vkládání obrázků do dokumentu
 \usepackage[usenames,dvipsnames,svgnames,table,rgb]{xcolor}
@@ -269,7 +269,7 @@ I understand that my work relates to the rights and obligations
 \sloppy
 \include{01-intro}
 \include{02-nmt}
-%\include{03-language-and-vision}
+\include{03-context}
 %\include{04-mmt}
 %\include{05-architectures}
 %\include{06-analysis}
