more markdown pokuses

--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -3,6 +3,15 @@
 \label{chap:intro}
 % %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\begin{markdown}
+
+* ahoj
+* beta
+    - hovno
+    - hovado
+
+\end{markdown}
+
 
 In this thesis, we present two case studies aimed on this phenomenon. In the
 first study, we provide additional context to the \gls{nmt} system and observe
