--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -62,7 +62,8 @@
 % \cventry{2017--2018}{Google Inc.}{}{}{}{Čtyřměsíční výzkumná stáž; deep learning v NLP}
 % \cventry{2016--2017}{University of Edinburgh}{}{}{}{Čtyřměsíční studijní pobyt; neuronový strojový překlad}
 
-\cventry{2017--2018}{Google Inc.}{}{}{}{Four-month research internship; deep learning for NLP}
+\cventry{2019}{Microsoft}{}{}{}{Four-month research internship; non-autoregressive models for neural machine translation}
+\cventry{2017--2018}{Google}{}{}{}{Four-month research internship; deep learning for NLP}
 \cventry{2016--2017}{University of Edinburgh}{}{}{}{Four-month research internship; neural machine translation}
 
 % \section{Pracovní zkušenosti}
@@ -119,7 +120,7 @@
 % \cvitem{programování}{\textbf{Python, Java, Bash}, Perl, PHP}
 % \cvitem{jiné}{Unix, Emacs, Git}
 
-\cvitem{programming}{\textbf{TensorFlow, Python, Bash}, C/C++, Java, Perl, PHP}
+\cvitem{programming}{\textbf{TensorFlow, Python, Bash}, Pytorch, C/C++, Java}
 \cvitem{other}{Unix, Emacs, Git}
 
 % \subsection{Strojové učení a NLP}
@@ -128,7 +129,7 @@
 %   Aplikováno na úlohách neuronového strojového překladu, clusterování dokumentů, detekce kolokací, jazykového modelování.}
 
 \subsection{Machine learning and NLP}
-\cvitem{}{Experience with both supervised and unsupervised learning, neural networks (using TensorFlow and Theano), processing of large data collections.
+\cvitem{}{Experience with both supervised and unsupervised learning, neural networks (using TensorFlow), processing of large data collections.
   Applied on neural machine translation, document clustering, language modeling.}
 
 
