--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -41,7 +41,7 @@
 % \cventry{2011--2014}{Mgr.}{Matematická lingvistika, Univerzita Karlova}{Praha}{}{}
 % \cventry{2007--2011}{Bc.}{Informatika, Univerzita Karlova}{Praha}{}{}
 
-\cventry{2014--present}{PhD.}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Thesis topic: Using External Information in Neural Machine Translation}
+\cventry{2014--present}{PhD.}{Institute of Formal and Applied Linguistics, Charles University}{Prague}{}{Thesis topic: On the Importance of Context in Neural Machine Translation}
 \cventry{2011--2014}{Mgr.}{Computational Linguistics, Charles University}{Prague}{}{}
 \cventry{2007--2011}{Bc.}{Computer Science, Charles University}{Prague}{}{}
 
