--- a/thesis/01-intro.tex
+++ b/thesis/01-intro.tex
@@ -1,20 +1,30 @@
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Introduction}
 \label{chap:intro}
-% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{markdown}
 
-* ahoj
-* beta
-    - hovno
-    - hovado
+pohádka:
+
+* role kontextu je odjakživa vnímaná jako důležitá (najít nějakou starou pohádku o překládání)
+* překladatelé překládaj celý dokumenty, zatímco automaty jedou zatím hlavně větu po větě
+* nicméně i když jedou větu po větě, dokážou překládat docela pěkně
+* důležitá součást kontextu v překladu je světovej kontext. překladatelé se ho naučili během života, automaty se ho učí díky velikosti dat, na kterých se trénují.
 
 \end{markdown}
 
+It is universally agreed that context plays a vital role in human
+communication.
+
+
+% při rozhovoru je kontext kromě toho, co bylo řečeno i to, kde, kdo s kým a za jakých okolností komunikuje. V případě korespondence
+% je kontext omezenější
+
+
 
 In this thesis, we present two case studies aimed on this phenomenon. In the
-first study, we provide additional context to the \gls{nmt} system and observe
+first study, we provide additional context to a \gls{nmt} system and observe
 the changes in translation quality. In the other case study, we go the other
 way: we limit the context available to the decoder and examine the model
 behavior.
